--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 #Large Data
 OpenCV_Python_2ndEdition_Examples.zip
 data/
+yolo_object_detection/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
